--- a/unika-html/unika-html/about.html
+++ b/unika-html/unika-html/about.html
@@ -180,7 +180,7 @@
                 <div class="col-sm-4">
                     <div class="content" style="padding: 10px; margin:30px">
                         <div class="product-card">
-                            <div class="product-container">
+                            <div class="product-container2">
                                 <h5 class="card-title">Laxman Kale</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Proprietor</h6>
                                 <p class="card-text">He
@@ -199,14 +199,14 @@
                 <div class="col-sm-4">
                     <div class="content" style="padding: 10px; margin:30px">
                         <div class="product-card" style="height: 100%;">
-                            <div class="product-container">
+                            <div class="product-container2">
                                 <h5 class="card-title">Ravi Kale</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Head-Quality, Manufacturing</h6>
                                 <p class="card-text">An engineer with vast experience of foreign assignments He has
                                     thorough knowledge of system analysis, system design and implementation. He has
                                     the experience since last 2decades in Foundry, gating system designed casting
                                     defect source.</p>
-
+                                
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                 <div class="col-sm-4">
                     <div class="content" style="padding: 10px; margin:30px">
                         <div class="product-card">
-                            <div class="product-container">
+                            <div class="product-container2">
                                 <h5 class="card-title">Ganesh Kale</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Head-Marketing</h6>
                                 <p class="card-text">A dynamic leader with experience since 1995 in product
