--- a/unika-html/unika-html/about.html
+++ b/unika-html/unika-html/about.html
@@ -83,12 +83,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="page-scroll" href="body">Home</a></li>
-                            <li><a class="page-scroll" href="#about-section">About Us</a></li>
-                            <li><a class="page-scroll" href="#services-section">Facilities</a></li>
-                            <li><a class="page-scroll" href="#portfolio-section">Products</a></li>
-                            <li><a class="page-scroll" href="#team-section">Industry</a></li>
-                            <li><a class="page-scroll" href="#contact-section">Contact Us</a></li>
+                            <li><a class="page-scroll" href="index.html">Home</a></li>
+                            <li><a class="page-scroll" href="body">About Us</a></li>
+                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="products.html">Products</a></li>
+                            <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
+                            <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container -->
@@ -111,7 +111,7 @@
                     <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                         <h2>About Us</h2>
                         <div class="devider"></div>
-                        <p class="subtitle">What we do</p>
+                        <p class="subtitle"><b>What we do</b></p>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="content" style="padding: 10px; margin:30px">
-                            <p><strong>M/s. Shree Samarth Pattern works</strong>, Mumbai, a firm originated
+                            <p style="font-size: 18px;"><strong>M/s. Shree Samarth Pattern works</strong>, Mumbai, a firm originated
                                 by&nbsp;<strong>Mr.Laxman Kale&nbsp;</strong>in 1968, with more than 40 years of
                                 industrial experience in the field.&nbsp; </p>
                                 <br>
@@ -128,7 +128,7 @@
 
 
 
-                            <p>For the past 4decades, the company has been providing quality pattern making services to
+                            <p style="font-size: 18px;">For the past 4decades, the company has been providing quality pattern making services to
                                 customers across India. Our workshops having area of 1,200 square feet, located in heart
                                 of Mumbai is equipped with the latest hand tool machinery and equipment, skilled
                                 manpower. </p>
@@ -136,7 +136,7 @@
 
 
 
-                            <p>Quality is our first priority. Our works offering various patterns using the latest
+                            <p style="font-size: 18px;">Quality is our first priority. Our works offering various patterns using the latest
                                 technology. We offer Wooden Pattern, Aluminum Pattern, Cast Iron Pattern, Shell Mould
                                 Patterns, Ceramic Moulding Dies, Injection Moulding Dies, Vacuum Forming Dies etc. </p>
                                 <br><br>
@@ -170,7 +170,7 @@
                 <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                     <h2>People Behind Company</h2>
                     <div class="devider"></div>
-                    <p class="subtitle">little information</p>
+                    <p class="subtitle"><b>little information</b></p>
                 </div>
             </div>
         </div>
@@ -178,12 +178,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="content" style="padding: 10px; margin:30px">
+                    <div class="content">
                         <div class="product-card">
                             <div class="product-container2">
-                                <h5 class="card-title">Laxman Kale</h5>
+                                <h4 class="card-title">Laxman Kale</h4>
                                 <h6 class="card-subtitle mb-2 text-muted">Proprietor</h6>
-                                <p class="card-text">He
+                                <hr style="border-top: 3px solid #bbb;">
+                                <br>
+                                <p class="card-text" style="padding: 0px 5px;">He
                                     is the founder of the Shree Samarth Pattern and leading the company since its
                                     Inception. He is considered as a dynamic leader and has a vast experience of 40
                                     years in business and management in the field of engineering. He is always in
@@ -197,12 +199,14 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <div class="content" style="padding: 10px; margin:30px">
+                    <div class="content" >
                         <div class="product-card" style="height: 100%;">
                             <div class="product-container2">
-                                <h5 class="card-title">Ravi Kale</h5>
+                                <h4 class="card-title">Ravi Kale</h4>
                                 <h6 class="card-subtitle mb-2 text-muted">Head-Quality, Manufacturing</h6>
-                                <p class="card-text">An engineer with vast experience of foreign assignments He has
+                                <hr style="border-top: 3px solid #bbb;">
+                                <br>
+                                <p class="card-text" style="padding: 0px 5px;">An engineer with vast experience of foreign assignments He has
                                     thorough knowledge of system analysis, system design and implementation. He has
                                     the experience since last 2decades in Foundry, gating system designed casting
                                     defect source.</p>
@@ -212,12 +216,15 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="content" style="padding: 10px; margin:30px">
+                    <div class="content">
                         <div class="product-card">
                             <div class="product-container2">
-                                <h5 class="card-title">Ganesh Kale</h5>
+                                <h4 class="card-title">Ganesh Kale</h4>
                                 <h6 class="card-subtitle mb-2 text-muted">Head-Marketing</h6>
-                                <p class="card-text">A dynamic leader with experience since 1995 in product
+                                
+                                <hr style="border-top: 3px solid #bbb;">
+                                <br>
+                                <p class="card-text" style="padding: 0px 5px;">A dynamic leader with experience since 1995 in product
                                     development, marketing, sales and service.He has empowered company by the QCS
                                     (Quality, Commitment and Service) philosophy and made the company a very strong
                                     market leader.</p>
