--- a/unika-html/unika-html/contact.html
+++ b/unika-html/unika-html/contact.html
@@ -78,12 +78,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="page-scroll" href="body">Home</a></li>
-                            <li><a class="page-scroll" href="#about-section">About Us</a></li>
-                            <li><a class="page-scroll" href="#services-section">Facilities</a></li>
-                            <li><a class="page-scroll" href="#portfolio-section">Products</a></li>
-                            <li><a class="page-scroll" href="#team-section">Industry</a></li>                            
-                            <li><a class="page-scroll" href="#contact-section">Contact Us</a></li>
+                            <li><a class="page-scroll" href="index.html">Home</a></li>
+                            <li><a class="page-scroll" href="about.html">About Us</a></li>
+                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="products.html">Products</a></li>
+                            <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
+                            <li><a class="page-scroll" href="body">Contact Us</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container -->
@@ -109,7 +109,7 @@
                 <div class="page-header-wrapper">
                     <div class="container">
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                            <h2>Contacts</h2>
+                            <h2>Contact US</h2>
                             <div class="devider"></div>
                             <p class="subtitle">All to contact us</p>
                         </div>
@@ -125,11 +125,11 @@
                                 <div class="contact-info">
                                     <h4>Our Address</h4>
                                     <ul class="contact-address">
-			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 100 Limpbiscayne Blvd. (North) 17st Floor ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New World Tower New York ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New York, USA, 33148</li>
-			                            <li><i class="fa fa-phone"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-print"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-envelope"></i> info@yourdomain.com</li>
-			                            <li><i class="fa fa-skype"></i> Unika-Design</li>
+			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; N-5 CCB.No. 14, Industrial Estate<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Udyambag, Belgavi ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Karnataka - 590 008 India</li>
+			                            <li><i class="fa fa-phone"></i>&nbsp;98692 45789</li>
+			                        
+			                            <li><i class="fa fa-envelope"></i> kaleindpro@gmail.com</li>
+			                            <li><i class="fa fa-skype"></i> Kale Industrial Products</li>
 			                        </ul>
                                 </div>
                             </div>
