--- a/unika-html/unika-html/index.html
+++ b/unika-html/unika-html/index.html
@@ -79,11 +79,11 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="body">Home</a></li>
-                            <li><a class="page-scroll" href="#about-section">About Us</a></li>
-                            <li><a class="page-scroll" href="#services-section">Facilities</a></li>
-                            <li><a class="page-scroll" href="#portfolio-section">Products</a></li>
-                            <li><a class="page-scroll" href="#team-section">Industry</a></li>                            
-                            <li><a class="page-scroll" href="#contact-section">Contact Us</a></li>
+                            <li><a class="page-scroll" href="about.html">About Us</a></li>
+                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="products.html">Products</a></li>
+                            <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
+                            <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container -->
@@ -135,7 +135,7 @@
                     <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                         <h2>Welcome</h2>
                         <div class="devider"></div>
-                        <p class="subtitle">What we do!</p>
+                        <p class="subtitle" ><b>What we do!</b></p>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                         <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                             <h2>About</h2>
                             <div class="devider"></div>
-                            <p class="subtitle">little information</p>
+                            <p class="subtitle"><b>little information</b></p>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="cta-btn wow bounceInRight" data-wow-delay="0.4s">
-                        <a class="btn btn-default btn-lg" href="http://www.imransdesign.com/" target="_blank" role="button">Read More</a>
+                        <a class="btn btn-default btn-lg" href="about.html" target="_blank" role="button">Read More</a>
                             </div>
                         </div>
                    
@@ -235,7 +235,7 @@
                                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                                             <h2>Our Products</h2>
                                             <div class="devider"></div>
-                                            <p class="subtitle">What we are proud of</p>
+                                            <p class="subtitle"><b>What we are proud of</b></p>
                                         </div>
                                     </div>
                                 </div>
@@ -316,7 +316,7 @@
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                             <h2>Our Clients</h2>
                             <div class="devider"></div>
-                            <p class="subtitle">Those who trust us</p>
+                            <p class="subtitle"><b>Those who trust us</b></p>
                         </div>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                             <h2>Join Us</h2>
                             <div class="devider"></div>
-                            <p class="subtitle">Follow us on social networks</p>
+                            <p class="subtitle"><b>Follow us on social networks</b></p>
                         </div>
                     </div>
                 </div>
@@ -386,9 +386,9 @@
                 <div class="page-header-wrapper">
                     <div class="container">
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                            <h2>Contacts</h2>
+                            <h2>Contact US</h2>
                             <div class="devider"></div>
-                            <p class="subtitle">All to contact us</p>
+                            <p class="subtitle"><b>All to contact us</b></p>
                         </div>
                     </div>
                 </div>
@@ -402,11 +402,11 @@
                                 <div class="contact-info">
                                     <h4>Our Address</h4>
                                     <ul class="contact-address">
-			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 100 Limpbiscayne Blvd. (North) 17st Floor ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New World Tower New York ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New York, USA, 33148</li>
-			                            <li><i class="fa fa-phone"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-print"></i>&nbsp; 1 -234 -456 -7890</li>
-			                            <li><i class="fa fa-envelope"></i> info@yourdomain.com</li>
-			                            <li><i class="fa fa-skype"></i> Unika-Design</li>
+			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; N-5 CCB.No. 14, Industrial Estate<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Udyambag, Belgavi<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Karnataka - 590 008 India</li>
+			                            <li><i class="fa fa-phone"></i>&nbsp;98692 45789</li>
+			                        
+			                            <li><i class="fa fa-envelope"></i> kaleindpro@gmail.com</li>
+			                            <li><i class="fa fa-skype"></i> Kale Industrial Products</li>
 			                        </ul>
                                 </div>
                             </div>
