--- a/unika-html/unika-html/products.html
+++ b/unika-html/unika-html/products.html
@@ -54,13 +54,12 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="page-scroll" href="body">Home</a></li>
-                        <li><a class="page-scroll" href="#about-section">About</a></li>
-                        <li><a class="page-scroll" href="#services-section">Services</a></li>
-                        <li><a class="page-scroll" href="#portfolio-section">Works</a></li>
-                        <li><a class="page-scroll" href="#team-section">Team</a></li>                            
-                        <li><a class="page-scroll" href="#prices-section">Prices</a></li>
-                        <li><a class="page-scroll" href="#contact-section">Contact</a></li>
+                        <li><a class="page-scroll" href="index.html">Home</a></li>
+                        <li><a class="page-scroll" href="about.html">About Us</a></li>
+                        <li><a class="page-scroll" href="#">Facilities</a></li>
+                        <li><a class="page-scroll" href="body">Products</a></li>
+                        <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
+                        <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container -->
