changed some files

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                             <li><a class="page-scroll" href="#">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
                             <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
-                            <li><a class="page-scroll" href="body">Contact Us</a></li>
+                            <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container -->
