--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="index.html">Home</a></li>
-                            <li><a class="page-scroll" href="body">About Us</a></li>
+                            <li><a class="page-scroll" href="about.html">About Us</a></li>
                             <li><a class="page-scroll" href="#">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
                             <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
