--- a/industry.html
+++ b/industry.html
@@ -87,7 +87,7 @@
                             <li><a class="page-scroll" href="about.html">About Us</a></li>
                             <li><a class="page-scroll" href="#">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
-                            <li><a class="page-scroll" href="body">Industry</a></li>                            
+                            <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
                             <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
