--- a/contact.html
+++ b/contact.html
@@ -134,8 +134,8 @@
                                 </div>
                             </div>
                         
-                        	<div class="col-sm-6">
-                                <div class="gmap_canvas" style="padding-bottom:50px"><iframe width="600" height="320" id="gmap_canvas" src="https://maps.google.com/maps?q=SHREE%20%20SAMARTH%20%20PATTERN%20%20WORKS%2C%20parel%2C%20mumbai%2C%20maharashtra%2C%20india&#038;t=&#038;z=13&#038;ie=UTF8&#038;iwloc=&#038;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:320px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:320px;width:600px;}</style>
+                        	<div class="col-sm-6" style="padding-right: 50px;">
+                                <div class="gmap_canvas" style="padding-bottom:50px; padding-right:50px;"><iframe width="500" height="320" id="gmap_canvas" src="https://maps.google.com/maps?q=Udyambag%20%20Industrial%20%20Area,%20%20Udyambag,%2C%20Belagavi,%2C%20Karnataka%2C%20india&#038;t=&#038;z=13&#038;ie=UTF8&#038;iwloc=&#038;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:320px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:320px;width:600px;}</style>
                             </div>
 </div>
                               
