--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="index.html">Home</a></li>
                             <li><a class="page-scroll" href="about.html">About Us</a></li>
-                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="facilities.html">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
                             <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
                             <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
@@ -120,8 +120,8 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="content" style="padding: 10px; margin:30px">
-                            <p style="font-size: 18px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm originated by <strong>Mr.Laxman Kale</strong> and
-                                proprietor by <strong>Mr.Ganesh Kale</strong> in 1968, with more than 55 years of industrial
+                            <p style="font-size: 18px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm
+                                proprietor by <strong>Mr.Ganesh Kale</strong> in 1968 with more than 55 years of industrial
                                 experience in the field.</p>
                                 <br>
                                 <br>
@@ -184,7 +184,8 @@
                         <div class="product-card">
                             <div class="product-container2">
                                 <h4 class="card-title">Laxman Kale</h4>
-                                <h6 class="card-subtitle mb-2 text-muted">Founder</h6>
+                                <h6 class="card-subtitle mb-2 text-muted"></h6>
+                                <br>
                                 <hr style="border-top: 3px solid #bbb;">
                                 <br>
                                 <p class="card-text" style="padding: 0px 5px;">He is the founder of the Shree Samarth Pattern and leading the company since its
