--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="index.html">Home</a></li>
                             <li><a class="page-scroll" href="about.html">About Us</a></li>
-                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="facilities.html">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
                             <li><a class="page-scroll" href="industry.html">Industry</a></li>                            
                             <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
