--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="body">Home</a></li>
                             <li><a class="page-scroll" href="about.html">About Us</a></li>
-                            <li><a class="page-scroll" href="#">Facilities</a></li>
+                            <li><a class="page-scroll" href="facilities.html">Facilities</a></li>
                             <li><a class="page-scroll" href="products.html">Products</a></li>
                             <li><a class="page-scroll" href="industry.html">Industry</a></li>
                             <li><a class="page-scroll" href="contact.html">Contact Us</a></li>
@@ -103,7 +103,7 @@
 
         <!-- Begin text carousel intro section -->
         <section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5"
-            style="background-image: url(img/logo_web.jpeg); background-size:cover;width:100%;padding-bottom: 5px;">
+            style="background-image: url(img/main_bg.png); background-size:100% 100%;width:100%;padding-bottom: 5px;">
 
             <div class="container">
                 <!-- <div class="caption text-center text-white" data-stellar-ratio="0.7">
@@ -206,8 +206,8 @@
                 <div class="row">
                     <div class="col-sm-6" style="padding-bottom: 20px;">
                         <div class="content" style="padding: 10px; margin:30px">
-                            <p style="font-size: 16px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm originated by <strong>Mr.Laxman Kale</strong> and
-                                proprietor by <strong>Mr.Ganesh Kale</strong> in 1968, with more than 55 years of industrial
+                            <p style="font-size: 16px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm
+                                proprietor by <strong>Mr.Ganesh Kale</strong> in 1968 with more than 55 years of industrial
                                 experience in the field.
                                 </p>
                                 <br>
