--- a/capabilities.html
+++ b/capabilities.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="inc/owl-carousel/css/owl.theme.css">
 
 		<!-- Theme CSS -->
+    <link rel="stylesheet" href="css/style1.css">
         <link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mobile.css">
@@ -72,20 +73,20 @@
         <br>
         <br>
         <button type="button" class="collapsible">3-D MODELLING</button>
-        <div class="content">
+        <div class="content2">
           <p><img src="img/3d-modeling.jpg"></p>
           <p>Advance Design Module.</p>
         </div>
         <br>
         <button type="button" class="collapsible">CAD/CAM FACILITIES</button>
-        <div class="content">
+        <div class="content2">
           <p><img src="img/cad-cam.jpg"></p>
           <p>For 3-D model to Cam.</p>
         </div>
         <br>
         
         <button type="button" class="collapsible">OUR WORK Team</button>
-        <div class="content">
+        <div class="content2">
           <p><img src="img/team-work.jpg"></p>
           <p><ul>
             <li>3-D Model Designer 01</li><br>
