added logo and modifiend text

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unika - Responsive One Page HTML5 Template</title>
+    <title>About Us</title>
     <meta name="description" content="Unika - Responsive One Page HTML5 Template">
     <meta name="keywords" content="HTML5, Bootsrtrap, One Page, Responsive, Template, Portfolio" />
     <meta name="author" content="imransdesign.com">
@@ -25,7 +25,7 @@
     <!-- Body font -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     <!-- Navbar font -->
-
+    <link rel="icon" href="img/indexpage/kale logo and header v1 3.jpg" type="image/x-icon">
     <!-- Libs and Plugins CSS -->
     <link rel="stylesheet" href="inc/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="inc/animations/css/animate.min.css">
@@ -121,14 +121,14 @@
                     <div class="col-sm-6">
                         <div class="content" style="padding: 10px; margin:30px">
                             <p style="font-size: 18px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm
-                                proprietor by <strong>Mr.Ganesh Kale</strong> in 1968 with more than 55 years of industrial
+                                proprietor by <strong>Mr.Ganesh Kale</strong> in 2021 with more than 30 years of industrial
                                 experience in the field.</p>
                                 <br>
                                 <br>
 
 
 
-                            <p style="font-size: 18px;">For the past 5 decades, the company has been providing quality pattern
+                            <p style="font-size: 18px;">The company has been providing quality pattern
                                 making services to customers across India and abroad. Our workshop having
                                 an area of 3500 square feet, located in the heart of Belgavi is equipped with
                                 the latest hand tools and automatic machinery and equipment with skilled
