--- a/facilities.html
+++ b/facilities.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unika - Responsive One Page HTML5 Template</title>
+    <title>Facilities</title>
     <meta name="description" content="Unika - Responsive One Page HTML5 Template">
     <meta name="keywords" content="HTML5, Bootsrtrap, One Page, Responsive, Template, Portfolio" />
     <meta name="author" content="imransdesign.com">
@@ -25,7 +25,7 @@
     <!-- Body font -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     <!-- Navbar font -->
-
+    <link rel="icon" href="img/indexpage/kale logo and header v1 3.jpg" type="image/x-icon">
     <!-- Libs and Plugins CSS -->
     <link rel="stylesheet" href="inc/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="inc/animations/css/animate.min.css">
