--- a/industry.html
+++ b/industry.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>KALE INDUTRIAL PRODUCTS</title>
+    <title>Industry</title>
     <meta name="description" content="Unika - Responsive One Page HTML5 Template">
     <meta name="keywords" content="HTML5, Bootsrtrap, One Page, Responsive, Template, Portfolio" />
     <meta name="author" content="imransdesign.com">
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="inc/font-awesome/css/font-awesome.min.css"> <!-- Font Icons -->
     <link rel="stylesheet" href="inc/owl-carousel/css/owl.carousel.css">
     <link rel="stylesheet" href="inc/owl-carousel/css/owl.theme.css">
-
+    <link rel="icon" href="img/indexpage/kale logo and header v1 3.jpg" type="image/x-icon">
     <!-- Theme CSS -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
