--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unika - Responsive One Page HTML5 Template</title>
+    <title>Products</title>
     <meta name="description" content="Unika - Responsive One Page HTML5 Template">
     <meta name="keywords" content="HTML5, Bootsrtrap, One Page, Responsive, Template, Portfolio" />
     <meta name="author" content="imransdesign.com">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="inc/font-awesome/css/font-awesome.min.css"> <!-- Font Icons -->
     <link rel="stylesheet" href="inc/owl-carousel/css/owl.carousel.css">
     <link rel="stylesheet" href="inc/owl-carousel/css/owl.theme.css">
-
+    <link rel="icon" href="img/indexpage/kale logo and header v1 3.jpg" type="image/x-icon">
     <!-- Theme CSS -->
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -272,7 +272,7 @@
                 <br>
                 <div class="product-card">
                     <div class="product-container">
-                        <h3><b>Machininig Solutions</b></h3>
+                        <h3><b>Machining Solutions</b></h3>
                         <p>We are offering High quality ans precision machining solutions by CNC and VMC machining.</p>
                     </div>
                 </div>
