--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                                 <div class="portfolio_content">
                                     <div class="row" id="portfolio">
                                         <div class="col-xs-12 col-sm-3 appsDevelopment">
-                                            <div class="portfolio_single_content">
-                                                <img src="img/products/wood-pattern1.jpg" alt="title" style="object-fit: contain;"/>
+                                            <div class="portfolio_single_content" style="object-fit:contain; ">
+                                                <img src="img/products/tw2.jpeg" alt="title"/>
                                                 <div>
                                                     <a href="#">TEAK WOOD </a>
                                                     <span>PATTERNS</span>
